# claudeusagedashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
launchd/: com.osmb.ccusage.plist  dashboard_launcher.applescript
src/ccusage/: collector.py  config.py  dashboard.py  data.py  db.py  errors.py  importer.py
tests/unit/: test_collector.py  test_config.py  test_data.py  test_db.py  test_importer.py
